--- a/myproject/src/component/Home.css
+++ b/myproject/src/component/Home.css
@@ -1018,4 +1018,46 @@ justify-content: space-around;
     text-transform: uppercase;
     margin: 9px 0 79px;
 }
+.get-started-btn-mobile-container {
+    position: fixed;
+    bottom: 0;
+    background: #fff;
+    width: 100%;
+    z-index: 4;
+    /* visibility: hidden; */
+    padding: 8px 16px;
+    /* -webkit-box-sizing: border-box; */
+    box-sizing: border-box;
+}
+.mobile-only {
+    display: block;
+}
+.mobile-only .get-started-btn-mobile {
+    background-color: #002684;
+    margin: 0;
+    height: 50px;
+    width: 100%;
+    /* -webkit-box-sizing: border-box; */
+    box-sizing: border-box;
+    line-height: 50px;
+}
+
+.get-cooking-btn-mobile {
+    height: 40px;
+   
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 2px;
+   
+  
+    padding: 0 40px;
+   
+   
+ 
+    color: #ffffff;
+    font-family: "Cera Pro", "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman", "HelveticaNeue-Roman", "Helvetica Neue Roman", "TeXGyreHerosRegular", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+  
+    border-radius: 10px;
+    text-transform: uppercase;
+}
 }
